# CC-Diagnostics

./: AGENT.md  MANIFEST.in  OPTIMIZATION_SUMMARY.md  README.md  gui.py  pyproject.toml  requirements.txt  settings.json
cc_diagnostics/: __init__.py  diagnostics.py  output_parser.py  report_renderer.py
cc_diagnostics/report_templates/: default.html
cc_diagnostics/utils/: storage_health.py  system_info.py  system_metrics.py  temperature.py  win11_check.py
tests/: test_deep_scan_html.py  test_gui_controller.py  test_output_parser.py  test_report_renderer.py  test_settings.py  test_storage_health.py  test_system_info.py  test_system_metrics.py  test_temperature.py  test_upload.py
tools/cc-diagnostics/: requirements.txt
tools/cc-diagnostics/cc_diag/: __init__.py
ui/: Main.qml  Recommendations.qml  ReportView.qml  SettingsDialog.qml  StatusCard.qml  Styles.qml
